<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:isScrollContainer="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="8dp"
                  android:id="@+id/formHolder">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"/>

        <TextView
                android:text="@string/formTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/formTitleTV"
                android:textAlignment="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginBottom="12dp"
        />
        <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/colorPrimary"
        />
        <TextView
                android:text="@string/speciesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/speciesTV"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="21sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:padding="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/speciesET"
                android:hint="@string/speciesHint"
                android:singleLine="true"
                android:background="@drawable/form_edit_text_background"/>
        <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
        />
        <LinearLayout
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rarityHolder">
            <TextView
                    android:text="@string/rarityText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/rarityTV"
                    android:layout_weight="1"
                    android:textSize="21sp"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/raritySpinner"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:popupBackground="@color/colorPrimary"/>
        </LinearLayout>
        <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
        />
        <TextView
                android:layout_marginTop="10dp"
                android:text="@string/notesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/notesTV"
                android:layout_marginBottom="5dp"
                android:textSize="21sp"/>
        <EditText
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:gravity="top|start"
                android:id="@+id/notesET"
                android:maxLines="6"
                android:lines="6"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:hint="@string/notesHint"
                android:background="@drawable/form_edit_text_background"
                android:scrollbars="vertical"/>
        <TextView
                android:layout_marginTop="10dp"
                android:text="@string/imageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageTV"
                android:layout_marginBottom="5dp"
                android:textSize="21sp"/>
        <ImageView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                app:srcCompat="@drawable/form_edit_text_background"
                android:id="@+id/formImageView"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:scaleType="fitXY"
                android:layout_height="wrap_content"
                android:showDividers="middle"
                android:divider="@drawable/empty_divider"
                android:id="@+id/buttonHolder">
            <Button
                    android:layout_margin="5dp"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/cancelButton"
                    android:layout_weight="2"
                    android:layout_gravity="start"
                    android:background="@android:drawable/btn_default"
                    android:text="@string/cancelBtnText"/>
            <Button
                    android:layout_margin="5dp"
                    android:layout_width="10dp"
                    android:layout_gravity="end"
                    android:layout_height="wrap_content"
                    android:id="@+id/createButton"
                    android:layout_weight="2"
                    android:background="@android:drawable/btn_default"
                    android:text="@string/createBtnText"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>